[gd_scene load_steps=17 format=3 uid="uid://dvqjq2aef6p32"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_p2nw1"]
[ext_resource type="Texture2D" uid="uid://drcetp7pgncjk" path="res://sprites/HeroKnight.png" id="1_sl7f4"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="3_kehky"]
[ext_resource type="Script" path="res://scripts/idle_state.gd" id="4_wjfta"]
[ext_resource type="Script" path="res://scripts/run_back_state.gd" id="5_dd6s5"]
[ext_resource type="Script" path="res://scripts/run_state.gd" id="5_eughx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r52yu"]
size = Vector2(20, 35)

[sub_resource type="Animation" id="Animation_88dtn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_wtqsi"]
resource_name = "attack1"
length = 0.75
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}

[sub_resource type="Animation" id="Animation_ur2pg"]
resource_name = "attack2"
length = 0.75
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}

[sub_resource type="Animation" id="Animation_u6kga"]
resource_name = "attack3"
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35, 36, 37]
}

[sub_resource type="Animation" id="Animation_33wrk"]
resource_name = "fall"
length = 0.5
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [41, 42, 43, 44]
}

[sub_resource type="Animation" id="Animation_45fkf"]
resource_name = "idle"
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_xfbcm"]
resource_name = "jump"
length = 0.375
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [38, 39, 40]
}

[sub_resource type="Animation" id="Animation_4j358"]
resource_name = "run"
length = 1.25
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15, 16, 17]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sux07"]
_data = {
"RESET": SubResource("Animation_88dtn"),
"attack1": SubResource("Animation_wtqsi"),
"attack2": SubResource("Animation_ur2pg"),
"attack3": SubResource("Animation_u6kga"),
"fall": SubResource("Animation_33wrk"),
"idle": SubResource("Animation_45fkf"),
"jump": SubResource("Animation_xfbcm"),
"run": SubResource("Animation_4j358")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
position = Vector2(0, -25)
script = ExtResource("1_p2nw1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_sl7f4")
hframes = 10
vframes = 9
frame = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 10
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_r52yu")

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_kehky")
starting_state = NodePath("IdleState")

[node name="IdleState" type="Node2D" parent="StateMachine"]
script = ExtResource("4_wjfta")

[node name="RunState" type="Node2D" parent="StateMachine"]
script = ExtResource("5_eughx")

[node name="RunBackState" type="Node2D" parent="StateMachine"]
script = ExtResource("5_dd6s5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sux07")
}
